Added tailwind Added header component

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Small description for tdd-notes-ui goes here",
   "repository": "",
   "license": "MIT",
-  "author": "",
+  "author": "", 
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -36,6 +36,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~3.28.0",
@@ -58,7 +59,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0"
+    "qunit-dom": "^1.6.0",
+    "tailwindcss": "^2.2.19"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
